--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="site-title abel uppercase text-center">
           Web Designer<span>Naoki Nemoto</span>
         </h1>
-        <img src="./images/img_profile.jpg" alt="プロフィール写真"
+        <img src="./images/profileimage.jpg" alt="プロフィール写真"
              width="140" height="140" class="block-center profile-icon">
         <p>
           Webデザイナー、根本直貴です。オンラインスクールでWeb制作について学び、
