--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <h1 class="site-title abel uppercase text-center">
           Web Designer<span>Naoki Nemoto</span>
         </h1>
-        <img src="./images/profileimage.jpg" alt="プロフィール写真"
+        <img src="./images/profile_img.jpg" alt="プロフィール写真"
              width="140" height="140" class="block-center profile-icon">
         <p>
           Webデザイナー、根本直貴です。オンラインスクールでWeb制作について学び、
-          憧れていたWebデザイナーへと転職活動中です。これからさらにWeb制作の技術や知識を身につけて、
+          憧れていたwebkit-flexデザイナーへと転職活動中です。これからさらにWeb制作の技術や知識を身につけて、
           クライアントにとって理想的なWebを作れるようなWebデザイナーになりたいと思っています。
         </p>
       </section>
@@ -57,7 +57,7 @@
         <div class="flex-box1">
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_site.png" alt="株式会社きらめき　コーポレイト様　Webサイトデザイン">
+              <img src="./images/site_img.jpg" alt="株式会社きらめき　コーポレイト様　Webサイトデザイン">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>株式会社きらめき<br>コーポレイトサイト</h3>
@@ -69,7 +69,7 @@
           </div>
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_card.jpg" alt="きらめき花子様　名刺デザイン">
+              <img src="./images/card_img.jpg" alt="きらめき花子様　名刺デザイン">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>きらめき花子様<br>名刺</h3>
@@ -81,7 +81,7 @@
           </div>
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+              <img src="./images/blog_img.jpg" alt="WordPressオリジナルテーマ">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>ブログデザイン</h3>
@@ -95,7 +95,7 @@
         <div class="flex-box2">
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_card.jpg" alt="きらめき花子様　名刺デザイン">
+              <img src="./images/card_img.jpg" alt="きらめき花子様　名刺デザイン">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>きらめき花子様<br>名刺</h3>
@@ -107,7 +107,7 @@
           </div>
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+              <img src="./images/blog_img.jpg" alt="WordPressオリジナルテーマ">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>ブログデザイン</h3>
@@ -119,7 +119,7 @@
           </div>
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_site.png" alt="株式会社きらめき　コーポレイト様　Webサイトデザイン">
+              <img src="./images/site_img.jpg" alt="株式会社きらめき　コーポレイト様　Webサイトデザイン">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>株式会社きらめき<br>コーポレイトサイト</h3>
@@ -133,7 +133,7 @@
         <div class="flex-box3">
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_site.png" alt="株式会社きらめき　コーポレイト様　Webサイトデザイン">
+              <img src="./images/site_img.jpg" alt="株式会社きらめき　コーポレイト様　Webサイトデザイン">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>株式会社きらめき<br>コーポレイトサイト</h3>
@@ -145,7 +145,7 @@
           </div>
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_card.jpg" alt="きらめき花子様　名刺デザイン">
+              <img src="./images/card_img.jpg" alt="きらめき花子様　名刺デザイン">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>きらめき花子様<br>名刺</h3>
@@ -157,7 +157,7 @@
           </div>
           <div class="works-box">
             <a href="#">
-              <img src="./images/img_work_blog.jpg" alt="WordPressオリジナルテーマ">
+              <img src="./images/blog_img.jpg" alt="WordPressオリジナルテーマ">
               <div class="works-box-inner">
                 <div class="text-center">
                   <h3>ブログデザイン</h3>
