--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Work of Website</title>
     <mata name="viewport" content="width=device-width initial-scale=1">
     <!-- css -->
-    <link rel="stylesheet" href="work.css">
+    <link rel="stylesheet" href="css/work.css">
   </head>
   <body>
     <div class="container">
