--- a/corporate-site/index.html
+++ b/corporate-site/index.html
@@ -100,7 +100,7 @@
       <!-- container -->
     </div>
     <div id="googlemap_area">
-      <script src="http://maps.google.com/maps/api/js?key=AIzaSyDNnhRZn484Q38jX5itjIBDT-LHgUt6iVo"></script>
+      <script src="//maps.google.com/maps/api/js?key=AIzaSyDNnhRZn484Q38jX5itjIBDT-LHgUt6iVo"></script>
       <script type="text/javascript">
       function googleMap() {
       var latlng = new google.maps.LatLng(35.6694293,139.7189323);/* 座標 */
